<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.andrempuerto.meli.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_to_list_products"
            app:destination="@id/view_list_products" />
    </fragment>

    <fragment
        android:id="@+id/view_detail_product"
        android:label="Detalle Producto"
        android:name="com.andrempuerto.meli.ui.product.detail.DetailProductFragment"
        tools:layout="@layout/fragment_detail_product" >
        <argument
            android:name="product"
            app:argType="com.andrempuerto.meli.model.Product"
            />
    </fragment>

    <fragment
        android:id="@+id/view_list_products"
        android:label="Listado Productos"
        android:name="com.andrempuerto.meli.ui.product.search.SearchProductFragment"
        tools:layout="@layout/fragment_search_product" >
        <action
            android:id="@+id/action_to_detail"
            app:destination="@id/view_detail_product" />
        <action
            android:id="@+id/action_to_recent"
            app:destination="@id/view_recent" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.andrempuerto.meli.ui.settings.SettingsFragment"
        android:label="Configuración" />

    <fragment
        android:id="@+id/view_recent"

        android:name="com.andrempuerto.meli.ui.recentsearch.RecentSearchFragment"
        android:label="Consultas Recientes"
        tools:layout="@layout/fragment_recent_list"/>
</navigation>