...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_sm">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/svProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_sm"
            android:layout_marginTop="@dimen/margin_sm"
            app:closeIcon="@drawable/ic_close"
            app:iconifiedByDefault="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:queryHint="@string/text_hint_searchview" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_md"
            app:setAdapter="@{adapterList}"
            app:isVisible="@{safeUnbox(!isEmpty)}"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
...
